# chatbot_Mudah.my

./: .gitignore  Dockerfile  config.yml  constraints.txt  domain.yml  graph.html  index.html  pyproject.toml  requirements.txt
actions/: actions.py
data/: nlu.yml  rules.yml
