[tool.poetry]
name = "chatbot-mudah"
version = "0.1.0"
description = "Mudah.my Customer Support Chatbot"
authors = ["Anas"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rasa = "3.6.4"
rasa-sdk = "3.6.2"
google-generativeai = "*"
setuptools = "59.8.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"